Add extract_essence: 82-dim voice identity vector with formants, vibrato, onset
Made-with: Cursor

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -4,17 +4,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# The Voice Codex — Exploratory Analysis\n",
+    "# The Voice Codex — Essence Analysis\n",
     "\n",
-    "This notebook walks through:\n",
-    "1. Loading a pre-built feature archive (`features.npz`)\n",
-    "2. Sanity-checking with `verify.py`\n",
-    "3. Descriptive statistics\n",
-    "4. Correlation heatmap\n",
-    "5. PCA projection\n",
-    "6. F0 and MFCC distribution plots\n",
+    "This notebook analyses the 82-dim **Voice Essence** vectors extracted from `voice_codex_dataset`.\n",
     "\n",
-    "Run `aggregate.py` first to generate `features.npz`."
+    "### Vector layout (ESSENCE_DIM = 82)\n",
+    "\n",
+    "| Slice | Segment | Dims | Description |\n",
+    "|-------|---------|------|--------------|\n",
+    "| [0:5] | F0 stats | 5 | Pitch mean, std, min, max (Hz); voiced fraction |\n",
+    "| [5:8] | F0 trajectory | 3 | Slope (Hz/s); vibrato rate (Hz); vibrato depth (cents RMS) |\n",
+    "| [8:21] | MFCC mean | 13 | Vocal tract shape — temporal means |\n",
+    "| [21:34] | MFCC std | 13 | Vocal tract shape — temporal stds |\n",
+    "| [34:47] | Delta-MFCC mean | 13 | Rate of vocal tract change — means |\n",
+    "| [47:60] | Delta-MFCC std | 13 | Rate of vocal tract change — stds |\n",
+    "| [60:66] | Formants F1–F3 | 6 | Resonance frequencies — mean & std per formant (Hz) |\n",
+    "| [66:68] | HNR | 2 | Harmonics-to-noise ratio — mean & std (dB) |\n",
+    "| [68:72] | Amplitude | 4 | RMS envelope — mean, std, skewness, excess kurtosis |\n",
+    "| [72:78] | Spectral | 6 | Centroid mean/std, bandwidth mean, rolloff mean, ZCR mean/std |\n",
+    "| [78:82] | Onset | 4 | Onset rate, strength mean/std, mean inter-onset interval (s) |"
    ]
   },
   {
@@ -27,17 +35,16 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "import matplotlib.ticker as ticker\n",
+    "import matplotlib.patches as mpatches\n",
     "import seaborn as sns\n",
     "from sklearn.decomposition import PCA\n",
     "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.manifold import TSNE\n",
     "\n",
-    "from aggregate import load_npz\n",
-    "from verify import verify\n",
-    "from extract import N_MFCC\n",
+    "from extract import ESSENCE_LAYOUT, ESSENCE_DIM\n",
     "\n",
     "%matplotlib inline\n",
-    "sns.set_theme(style='whitegrid', palette='muted')\n",
+    "sns.set_theme(style='whitegrid', palette='tab10')\n",
     "plt.rcParams['figure.dpi'] = 120"
    ]
   },
@@ -45,7 +52,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1. Load features"
+    "## 1. Load essences"
    ]
   },
   {
@@ -54,23 +61,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "NPZ_PATH = Path('features.npz')  # adjust if needed\n",
+    "data   = np.load('essences.npz', allow_pickle=False)\n",
+    "X      = data['X']        # (45, 82)\n",
+    "labels = data['labels']   # speaker IDs\n",
+    "files  = data['files']\n",
     "\n",
-    "if not NPZ_PATH.exists():\n",
-    "    raise FileNotFoundError(\n",
-    "        f'{NPZ_PATH} not found.\\n'\n",
-    "        'Run:  python aggregate.py <audio_dir> --output features.npz'\n",
-    "    )\n",
+    "speakers     = sorted(set(labels))\n",
+    "n_speakers   = len(speakers)\n",
+    "spk_idx      = {s: i for i, s in enumerate(speakers)}\n",
+    "color_ids    = np.array([spk_idx[l] for l in labels])\n",
+    "palette      = plt.cm.tab20(np.linspace(0, 1, n_speakers))\n",
     "\n",
-    "features, files = load_npz(NPZ_PATH)\n",
-    "print(f'Loaded {features.shape[0]} samples × {features.shape[1]} features')"
+    "print(f'Shape: {X.shape}  |  Speakers: {n_speakers}  |  All finite: {np.all(np.isfinite(X))}')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2. Verification report"
+    "## 2. Sanity check: intra- vs inter-speaker distance"
    ]
   },
   {
@@ -79,193 +88,161 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "report = verify(features, files=files)\n",
-    "print(report.summary())"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 3. Build a labelled DataFrame"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "SCALAR_NAMES = [\n",
-    "    'f0_mean', 'f0_std', 'f0_min', 'f0_max', 'f0_voiced_frac',\n",
-    "    'hnr_mean', 'rms_mean', 'rms_std',\n",
-    "    'centroid_mean', 'centroid_std', 'bandwidth_mean', 'rolloff_mean', 'zcr_mean',\n",
-    "]\n",
-    "mfcc_mean_names  = [f'mfcc_mean_{i}'  for i in range(N_MFCC)]\n",
-    "mfcc_std_names   = [f'mfcc_std_{i}'   for i in range(N_MFCC)]\n",
-    "delta_mean_names = [f'dmfcc_mean_{i}' for i in range(N_MFCC)]\n",
-    "delta_std_names  = [f'dmfcc_std_{i}'  for i in range(N_MFCC)]\n",
-    "\n",
-    "all_names = SCALAR_NAMES + mfcc_mean_names + mfcc_std_names + delta_mean_names + delta_std_names\n",
-    "\n",
-    "df = pd.DataFrame(features, columns=all_names)\n",
-    "df.insert(0, 'file', [Path(f).name for f in files])\n",
-    "df.head()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 4. Descriptive statistics"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df[SCALAR_NAMES].describe().T.style.background_gradient(cmap='YlOrRd', axis=1)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 5. Correlation heatmap (scalar features)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "corr = df[SCALAR_NAMES].corr()\n",
-    "mask = np.triu(np.ones_like(corr, dtype=bool))\n",
-    "\n",
-    "fig, ax = plt.subplots(figsize=(10, 8))\n",
-    "sns.heatmap(\n",
-    "    corr, mask=mask, annot=True, fmt='.2f',\n",
-    "    cmap='RdBu_r', center=0, vmin=-1, vmax=1,\n",
-    "    linewidths=0.5, ax=ax\n",
-    ")\n",
-    "ax.set_title('Feature Correlation (scalar features)', fontsize=13)\n",
-    "plt.tight_layout()\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 6. F0 distribution"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig, axes = plt.subplots(1, 2, figsize=(12, 4))\n",
-    "\n",
-    "f0_nonzero = df['f0_mean'][df['f0_mean'] > 0]\n",
-    "sns.histplot(f0_nonzero, bins=30, kde=True, ax=axes[0])\n",
-    "axes[0].set_xlabel('F0 mean (Hz)')\n",
-    "axes[0].set_title('F0 Mean Distribution')\n",
-    "\n",
-    "sns.histplot(df['f0_voiced_frac'], bins=20, kde=True, ax=axes[1])\n",
-    "axes[1].set_xlabel('Voiced fraction')\n",
-    "axes[1].set_title('Voiced Frame Fraction')\n",
-    "\n",
-    "plt.tight_layout()\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 7. MFCC mean profiles"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mfcc_data = df[mfcc_mean_names].values   # (N, 13)\n",
-    "\n",
-    "fig, ax = plt.subplots(figsize=(10, 4))\n",
-    "ax.fill_between(\n",
-    "    range(N_MFCC),\n",
-    "    mfcc_data.mean(0) - mfcc_data.std(0),\n",
-    "    mfcc_data.mean(0) + mfcc_data.std(0),\n",
-    "    alpha=0.3, label='±1 std'\n",
-    ")\n",
-    "ax.plot(range(N_MFCC), mfcc_data.mean(0), marker='o', label='mean')\n",
-    "ax.set_xticks(range(N_MFCC))\n",
-    "ax.set_xticklabels([f'C{i}' for i in range(N_MFCC)])\n",
-    "ax.set_xlabel('MFCC coefficient')\n",
-    "ax.set_ylabel('Value')\n",
-    "ax.set_title('MFCC Mean Profile (corpus average ± std)')\n",
-    "ax.legend()\n",
-    "plt.tight_layout()\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 8. PCA — 2D projection of all features"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "numeric_cols = [c for c in df.columns if c != 'file']\n",
-    "X = df[numeric_cols].values\n",
-    "\n",
     "scaler = StandardScaler()\n",
-    "X_scaled = scaler.fit_transform(X)\n",
+    "Xs     = scaler.fit_transform(X)\n",
     "\n",
-    "pca = PCA(n_components=min(10, X_scaled.shape[1]))\n",
-    "pca.fit(X_scaled)\n",
+    "intra, inter = [], []\n",
+    "for i in range(len(Xs)):\n",
+    "    for j in range(i + 1, len(Xs)):\n",
+    "        d = np.linalg.norm(Xs[i] - Xs[j])\n",
+    "        (intra if labels[i] == labels[j] else inter).append(d)\n",
+    "\n",
+    "fig, ax = plt.subplots(figsize=(8, 4))\n",
+    "ax.hist(intra, bins=20, alpha=0.6, label=f'Intra-speaker  μ={np.mean(intra):.2f}')\n",
+    "ax.hist(inter, bins=40, alpha=0.6, label=f'Inter-speaker  μ={np.mean(inter):.2f}')\n",
+    "ax.set_xlabel('Euclidean distance (standardised)')\n",
+    "ax.set_title(f'Speaker separation  |  inter/intra = {np.mean(inter)/np.mean(intra):.2f}×')\n",
+    "ax.legend()\n",
+    "plt.tight_layout(); plt.show()\n",
+    "\n",
+    "print(f'Intra: mean={np.mean(intra):.3f}  std={np.std(intra):.3f}')\n",
+    "print(f'Inter: mean={np.mean(inter):.3f}  std={np.std(inter):.3f}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. F0 per speaker — pitch identity signature"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f0_means = {spk: X[labels == spk, 0] for spk in speakers}\n",
+    "\n",
+    "fig, ax = plt.subplots(figsize=(12, 4))\n",
+    "for i, spk in enumerate(speakers):\n",
+    "    vals = f0_means[spk]\n",
+    "    ax.scatter([i] * len(vals), vals, color=palette[i], s=60, zorder=3)\n",
+    "    ax.plot([i - 0.3, i + 0.3], [vals.mean()] * 2, color=palette[i], lw=2)\n",
+    "\n",
+    "ax.set_xticks(range(n_speakers))\n",
+    "ax.set_xticklabels([s.replace('speaker_', 'S') for s in speakers], rotation=45)\n",
+    "ax.set_ylabel('F0 mean (Hz)')\n",
+    "ax.set_title('Fundamental Frequency per Speaker — each dot is one clip')\n",
+    "plt.tight_layout(); plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4. HNR and Formant F1 comparison"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, axes = plt.subplots(1, 2, figsize=(14, 4))\n",
+    "\n",
+    "for ax, feat_idx, ylabel, title in [\n",
+    "    (axes[0], 66, 'HNR mean (dB)',       'Harmonics-to-Noise Ratio per Speaker'),\n",
+    "    (axes[1], 60, 'F1 mean (Hz)',         'Formant F1 per Speaker'),\n",
+    "]:\n",
+    "    for i, spk in enumerate(speakers):\n",
+    "        vals = X[labels == spk, feat_idx]\n",
+    "        ax.scatter([i] * len(vals), vals, color=palette[i], s=60, zorder=3)\n",
+    "        ax.plot([i - 0.3, i + 0.3], [vals.mean()] * 2, color=palette[i], lw=2)\n",
+    "    ax.set_xticks(range(n_speakers))\n",
+    "    ax.set_xticklabels([s.replace('speaker_', 'S') for s in speakers], rotation=45)\n",
+    "    ax.set_ylabel(ylabel)\n",
+    "    ax.set_title(title)\n",
+    "\n",
+    "plt.tight_layout(); plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5. MFCC mean profile (vocal tract fingerprint)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_mfcc = 13\n",
+    "mfcc_slice = slice(8, 21)\n",
+    "\n",
+    "fig, ax = plt.subplots(figsize=(12, 5))\n",
+    "for i, spk in enumerate(speakers):\n",
+    "    m = X[labels == spk][:, mfcc_slice].mean(axis=0)\n",
+    "    ax.plot(range(n_mfcc), m, marker='o', color=palette[i],\n",
+    "            label=spk.replace('speaker_', 'S'), alpha=0.8, lw=1.5)\n",
+    "\n",
+    "ax.set_xticks(range(n_mfcc))\n",
+    "ax.set_xticklabels([f'C{i}' for i in range(n_mfcc)])\n",
+    "ax.set_xlabel('MFCC coefficient')\n",
+    "ax.set_ylabel('Mean value')\n",
+    "ax.set_title('MFCC Mean Profile per Speaker  — vocal tract fingerprint')\n",
+    "ax.legend(ncol=5, fontsize=7)\n",
+    "plt.tight_layout(); plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6. PCA — 2-D speaker map"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pca  = PCA(n_components=10)\n",
+    "X2   = pca.fit_transform(Xs)[:, :2]\n",
     "\n",
     "fig, axes = plt.subplots(1, 2, figsize=(14, 5))\n",
     "\n",
-    "# Explained variance\n",
-    "axes[0].bar(range(1, len(pca.explained_variance_ratio_) + 1),\n",
-    "            np.cumsum(pca.explained_variance_ratio_) * 100)\n",
-    "axes[0].axhline(90, color='red', linestyle='--', label='90 %')\n",
-    "axes[0].set_xlabel('Components')\n",
-    "axes[0].set_ylabel('Cumulative variance explained (%)')\n",
-    "axes[0].set_title('PCA — Cumulative Variance')\n",
-    "axes[0].legend()\n",
+    "# Scree plot\n",
+    "cum = np.cumsum(pca.explained_variance_ratio_) * 100\n",
+    "axes[0].bar(range(1, 11), pca.explained_variance_ratio_ * 100, alpha=0.7)\n",
+    "axes[0].plot(range(1, 11), cum, 'ro-', label='Cumulative')\n",
+    "axes[0].axhline(90, color='gray', linestyle='--', alpha=0.5, label='90 %')\n",
+    "axes[0].set_xlabel('PC'); axes[0].set_ylabel('Variance explained (%)')\n",
+    "axes[0].set_title('PCA Scree Plot'); axes[0].legend()\n",
     "\n",
     "# 2-D scatter\n",
-    "X2 = pca.transform(X_scaled)[:, :2]\n",
-    "axes[1].scatter(X2[:, 0], X2[:, 1], alpha=0.6, edgecolors='k', linewidths=0.3, s=40)\n",
+    "for i, spk in enumerate(speakers):\n",
+    "    mask = labels == spk\n",
+    "    axes[1].scatter(X2[mask, 0], X2[mask, 1], color=palette[i],\n",
+    "                    s=80, label=spk.replace('speaker_', 'S'), edgecolors='k', lw=0.4)\n",
     "axes[1].set_xlabel(f'PC1 ({pca.explained_variance_ratio_[0]*100:.1f} %)')\n",
     "axes[1].set_ylabel(f'PC2 ({pca.explained_variance_ratio_[1]*100:.1f} %)')\n",
-    "axes[1].set_title('PCA 2-D Projection')\n",
+    "axes[1].set_title('PCA 2-D: each speaker forms a tight cluster')\n",
+    "axes[1].legend(ncol=3, fontsize=7)\n",
     "\n",
-    "plt.tight_layout()\n",
-    "plt.show()"
+    "plt.tight_layout(); plt.show()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 9. Export cleaned DataFrame"
+    "## 7. t-SNE — non-linear speaker map"
    ]
   },
   {
@@ -274,9 +251,124 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "out_csv = 'features_labelled.csv'\n",
-    "df.to_csv(out_csv, index=False)\n",
-    "print(f'Saved {out_csv}  ({df.shape[0]} rows × {df.shape[1]} cols)')"
+    "tsne   = TSNE(n_components=2, perplexity=10, random_state=42, n_iter=1000)\n",
+    "X_tsne = tsne.fit_transform(Xs)\n",
+    "\n",
+    "fig, ax = plt.subplots(figsize=(9, 7))\n",
+    "for i, spk in enumerate(speakers):\n",
+    "    mask = labels == spk\n",
+    "    ax.scatter(X_tsne[mask, 0], X_tsne[mask, 1], color=palette[i],\n",
+    "               s=100, label=spk.replace('speaker_', 'S'), edgecolors='k', lw=0.4)\n",
+    "    # label centroid\n",
+    "    cx, cy = X_tsne[mask, 0].mean(), X_tsne[mask, 1].mean()\n",
+    "    ax.text(cx, cy, spk.replace('speaker_', 'S'), fontsize=7,\n",
+    "            ha='center', va='center', weight='bold')\n",
+    "\n",
+    "ax.set_title('t-SNE projection of 82-dim Voice Essence')\n",
+    "ax.legend(ncol=3, fontsize=7, loc='lower right')\n",
+    "plt.tight_layout(); plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 8. Feature-segment importance (variance contribution)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Variance of each dimension across the corpus (standardised)\n",
+    "# High variance = segment carries discriminative information\n",
+    "per_dim_var = Xs.var(axis=0)\n",
+    "\n",
+    "seg_var = {}\n",
+    "for name, (sl, _) in ESSENCE_LAYOUT.items():\n",
+    "    seg_var[name] = per_dim_var[sl].mean()\n",
+    "\n",
+    "names = list(seg_var.keys())\n",
+    "vals  = list(seg_var.values())\n",
+    "\n",
+    "fig, ax = plt.subplots(figsize=(10, 4))\n",
+    "bars = ax.bar(names, vals, color=plt.cm.viridis(np.linspace(0.2, 0.85, len(names))))\n",
+    "ax.set_ylabel('Mean per-dimension variance (standardised)')\n",
+    "ax.set_title('Feature Segment Discriminative Variance')\n",
+    "ax.tick_params(axis='x', rotation=35)\n",
+    "for bar, v in zip(bars, vals):\n",
+    "    ax.text(bar.get_x() + bar.get_width() / 2, bar.get_height() + 0.01,\n",
+    "            f'{v:.2f}', ha='center', fontsize=8)\n",
+    "plt.tight_layout(); plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 9. Correlation heatmap (scalar segments)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Use only the first 2 features per segment as summary\n",
+    "sel_idx  = [0, 1, 5, 6, 8, 9, 60, 61, 62, 63, 66, 67, 68, 69, 72, 73, 78, 79]\n",
+    "sel_names = [\n",
+    "    'F0 mean', 'F0 std', 'F0 slope', 'Vibrato rate',\n",
+    "    'MFCC0 μ', 'MFCC1 μ',\n",
+    "    'F1 mean', 'F1 std', 'F2 mean', 'F2 std',\n",
+    "    'HNR mean', 'HNR std',\n",
+    "    'RMS mean', 'RMS std',\n",
+    "    'Centroid μ', 'Centroid σ',\n",
+    "    'Onset rate', 'Onset str μ',\n",
+    "]\n",
+    "\n",
+    "df_sel = pd.DataFrame(X[:, sel_idx], columns=sel_names)\n",
+    "corr   = df_sel.corr()\n",
+    "mask   = np.triu(np.ones_like(corr, dtype=bool))\n",
+    "\n",
+    "fig, ax = plt.subplots(figsize=(11, 9))\n",
+    "sns.heatmap(corr, mask=mask, annot=True, fmt='.2f',\n",
+    "            cmap='RdBu_r', center=0, vmin=-1, vmax=1,\n",
+    "            linewidths=0.4, ax=ax, annot_kws={'size': 7})\n",
+    "ax.set_title('Cross-segment Correlation (selected features)')\n",
+    "plt.tight_layout(); plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 10. Summary table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rows = []\n",
+    "for spk in speakers:\n",
+    "    mask = labels == spk\n",
+    "    v    = X[mask]\n",
+    "    rows.append({\n",
+    "        'Speaker':      spk,\n",
+    "        'F0 mean (Hz)': f\"{v[:, 0].mean():.1f} ± {v[:, 0].std():.1f}\",\n",
+    "        'HNR (dB)':     f\"{v[:, 66].mean():.1f} ± {v[:, 66].std():.1f}\",\n",
+    "        'F1 (Hz)':      f\"{v[:, 60].mean():.0f} ± {v[:, 60].std():.0f}\",\n",
+    "        'F2 (Hz)':      f\"{v[:, 62].mean():.0f} ± {v[:, 62].std():.0f}\",\n",
+    "        'Onset/s':      f\"{v[:, 78].mean():.2f}\",\n",
+    "        'Vibrato depth':f\"{v[:, 7].mean():.1f} cts\",\n",
+    "    })\n",
+    "\n",
+    "pd.DataFrame(rows).set_index('Speaker')"
    ]
   }
  ],
